fixed spacing header

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ header {
 .section1 {
   background-color: #222;
   color: #fff;
+  padding: 30px 0;
 }
 
 .section1 h1 {
@@ -107,6 +108,8 @@ header {
   padding-right: 15px;
   padding-left: 15px;
   margin-top: 0;
+  font-size: 2.25em;
+  line-height: 1.2em;
 }
 
 /*section2*/
